--- a/src/components/Auth/AuthForm.module.css
+++ b/src/components/Auth/AuthForm.module.css
@@ -3,7 +3,7 @@
     width: 95%;
     max-width: 25rem;
     border-radius: 6px;
-    background-color: #38015c;
+    background-color: #4C16B6;
     box-shadow: 0 1px 4px rgba(0, 0, 0, 0.2);
     padding: 1rem;
     text-align: center;
@@ -12,6 +12,7 @@
   .auth h1 {
     text-align: center;
     color: white;
+    padding: 1rem;
   }
   
   .control {
